# egt-swupdate

./: .gitignore  CMakeLists.txt  version.h.in
include/: http.h  mainwin.h
src/: http.cpp  main.cpp  mainwin.cpp
